# VirtualMuseum

./: CMakeLists.txt  README-VirtualMuseum.md  README.md  imgui.ini
models/: README_models.md  heykel.mtl  manstatue.mtl  modelleme.mtl  roma_mezar_modelleme.mtl  roma_yeni.mtl
shaders/: fragment.glsl  vertex.glsl
src/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Robot.cpp  Robot.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  UIManager.cpp  UIManager.h  main.cpp
